styles/main-style.css
html {
    -webkit-text-size-adjust: 100%;
    font-size: 12px;
}

body {
    color: #252135;
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-size: 1.3rem;
    background: #FAF4EC;
    margin: 0;
    padding: 0;
}

.semibold-text {
    font-weight: 600;
    font-size: 2.2rem;
}

.bold-text {
    font-weight: 700;
}

.extrabold-text {
    font-weight: 800;
    font-size: 2.4rem;
}

/* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
/* @media screen and (min-width: 601px) {
    p {
        font-size: 10pt;
    }
} */
  
@media screen and (max-width: 600px) {
    /* p {
        font-size: 20pt;
    } */
}

h1 {
    color: #FAF4EC;
}

a:link {
    text-decoration: underline;
    color: #ED4D6E;
}

a:visited,
a:active {
    text-decoration: underline;
    color: #94958B;
}

a:hover {
    text-decoration: underline;
    color: #F07933;
}

#style-switcher {
    margin-top: 0.85rem;
    margin-right: 0.85rem;

    display: block;
    margin-left: auto;

    width: 2.5rem;
    height: 2.5rem;
}

#sun-svg {
    display: none;
    fill: #FAF4EC;
}

#moon-svg {
    display: block;
    fill: #585379;
}

.header {
    text-align: center;
}

.header-speech-bubble {
    /* transform: rotate(2deg); */
    background-color: #D7827D;
    margin: auto;
    width: 15em;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 4rem;
}

.arrow-down {
  width: 0; 
  height: 0; 
  border-left: 15px solid transparent;
  border-right: 15px solid transparent;
  border-top: 30px solid #D7827D;

  margin: auto;
}

#greeting {
    animation: shake 2s;
    animation-iteration-count: 1.5;
    display: inline-block;
}

/* all :hover rules need to be prepended with body.with-mouse-input */
body.with-mouse-input #greeting:hover {
    animation: shake 2s;
    animation-iteration-count: infinite;
}

#container {
    position: relative;
    width: 100%;
}

#content {
    padding: 0.45rem;
    text-align: center;
}

#left-menu {
    position: absolute;
    left: 0.45rem;
    top: 0;
    width: 12.5rem;
    padding: 0.45rem 0.45rem 1.25rem 0.45rem;
    text-align: left;
}

#right-menu {
    position: absolute;
    right: 0.45rem;
    top: 0;
    width: 12.5rem;
    padding: 0.45rem;
    text-align: right;
}

#left-menu ul,
#right-menu ul {
    list-style-type: none;
    margin: 0;
    padding: 0 0.45rem;
}

.talk-to-me {
    display: flex;
    margin-top: 0.85rem;
}

.speech-bubble {
	position: relative;
	background: #D7827D;
	border-radius: 0.4em;

    left: 1.25rem;
    text-align: center;
    color: #252135;

    border: 1px solid #D7827D;
    display: flex;
    align-items: center;
    justify-content: center;

    padding: 0 0.85rem 0 0.85rem;
    margin: 1px;
}

.speech-bubble:after {
	content: '';
	position: absolute;
	left: 0;
	/* top: 50%; */
    top: 3.8rem;
	width: 0;
	height: 0;
	border: 0.5em solid transparent;
	border-right-color: #D7827D;
	border-left: 0;
	margin-top: -0.5em;
	margin-left: -0.5em;
}

#moi {
    border-radius: 50%;
    width: 12rem;
    height: auto;
    aspect-ratio: 1;
    align-self: start;
    margin-top: 1em;
    border-style: solid;
    border-color: #585379;
    border-width: 0.335rem;
}

/* all :hover rules need to be prepended with body.with-mouse-input */
body.with-mouse-input #moi:hover {
    animation: wigglewiggle 2s;
    animation-iteration-count: infinite;
}

/* animation specs */
@keyframes wiggle {
    0% { transform: rotate(0deg); }
    80% { transform: rotate(0deg); }
    85% { transform: rotate(5deg); }
    95% { transform: rotate(-5deg); }
    100% { transform: rotate(0deg); }
}

@keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    10% { transform: translate(-1px, -2px) rotate(-1deg); }
    20% { transform: translate(-3px, 0px) rotate(1deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(1px, -1px) rotate(1deg); }
    50% { transform: translate(-1px, 2px) rotate(-1deg); }
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    70% { transform: translate(3px, 1px) rotate(-1deg); }
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
}

@keyframes wigglewiggle {
    0% { transform: rotate(0deg); }
    10% { transform: rotate(-5deg); }
    20% { transform: rotate(5deg); }
    30% { transform: rotate(0deg); }
    40% { transform: rotate(5deg); }
    50% { transform: rotate(-5deg); }
    60% { transform: rotate(0deg); }
    70% { transform: rotate(-5deg); }
    80% { transform: rotate(5deg); }
    90% { transform: rotate(0deg); }
    100% { transform: rotate(-5deg); }
}

/* dark mode styles */
.dark-mode {
    color: #FAF4EC;
    background: #252135;
}

.dark-mode h1 {
    color: #252135;
}

.dark-mode a {
    color: #FAF4EC;
}

.dark-mode a:link {
    text-decoration: underline;
    /* color: #ED4D6E; */
}

.dark-mode a:visited,
.dark-mode a:active {
    text-decoration: underline;
    color: #94958B;
}

.dark-mode a:hover {
    text-decoration: underline;
    color: #F07933;
}

